[package]
edition = "2018"
name = "monzo"
version = "0.1.0"
[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
const_format = "*"
lazy_static = "*"
pollster = "*"
regex = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_qs = "*"
warp = "0.3"

[dependencies.tokio]
features = ["full"]
version = "1"

[lib]
name = "monzo"
path = "src/lib.rs"
